Added GPU backend into the filter classes
* Filter integration
* Error handling for preview feature check